Fix margins for navigation bar on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,16 @@ footer a {
         padding-top: 20px;
     }
 
+    #navigation li {
+        /* float: right;
+        list-style-type: none; */
+        /* margin-right: 30px; */
+        margin-left: 0px;
+        margin-right: 30px;
+        /* font-size: 120%; */
+        /* color: green; */
+    }
+
 }
 
 /* For screens with width 750px and below */
